lang/starlark/y.output

state 0
	$accept: .doc $end 
	Content: .    (2)

	.  reduce 2 (src line 44)

	doc  goto 1
	Content  goto 2

state 1
	$accept:  doc.$end 

	$end  accept
	.  error


state 2
	doc:  Content.    (1)
	Content:  Content.Comment 

	commentInline  shift 4
	commentMultiline  shift 5
	.  reduce 1 (src line 42)

	Comment  goto 3

state 3
	Content:  Content Comment.    (3)

	.  reduce 3 (src line 45)


state 4
	Comment:  commentInline.    (4)

	.  reduce 4 (src line 49)


state 5
	Comment:  commentMultiline.    (5)

	.  reduce 5 (src line 51)


28 terminals, 4 nonterminals
6 grammar rules, 6/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
53 working sets used
memory: parser 2/240000
0 extra closures
2 shift entries, 1 exceptions
3 goto entries
0 entries saved by goto default
Optimizer space used: output 8/240000
8 table entries, 3 zero
maximum spread: 27, maximum offset: 20
